# MowerEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Engine.cpp  README.md
cmake/: FindSDL2.cmake  FindSOL2.cmake
src/: Engine.cpp  Engine.h  InputProcessor.cpp  Mower.cpp  Mower.h  Object2D.cpp  Object2D.h  TestInputHandler.cpp  TestInputHandler.h  TestInputHandler2.cpp  TestInputHandler2.h  common.h  main.cpp
src/graphics/: CheckerBoardTexture.cpp  CheckerBoardTexture.h  Color.cpp  Color.h  Rectangle.cpp  Rectangle.h  TestObject.cpp  TestObject.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/graphics/animation/: Animation.cpp  Animation.h
src/graphics/texturing/: Animation.cpp  Animation.h  Image.cpp  Image.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/graphics/texturing/memory/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/graphics/util/: Color.cpp  Color.h  FRect.h
src/input/: BoundInputHandler.cpp  InputHandler.cpp  InputHandler.h  InputProcessor.cpp  InputProcessor.h
src/input/handlers/: BoundInputHandler.cpp  BoundInputHandler.h  InputHandler.cpp  InputHandler.h  InputMultiplexer.cpp  InputMultiplexer.h
src/input/processors/: InputProcessor.cpp  InputProcessor.h
src/logging/: Log.cpp  Log.h
src/logic/Components/: Textured.h
src/logic/components/: Collider.h  Collision.h  Position.h  Script.h  Textured.h
src/logic/ecs/: Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  ComponentManager.hpp  ComponentMapper.cpp  ComponentMapper.h  ComponentPool.h  ComponentPool.hpp  Coordinator.h  Coordinator.hpp  ECSTypes.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Entity.hpp  EntityManager.cpp  EntityManager.h  System.cpp  System.h  SystemManager.h  SystemManager.hpp
src/logic/systems/: CollisionSystem.cpp  CollisionSystem.h  ScriptSystem.cpp  ScriptSystem.h  ScriptedSystem.cpp  ScriptedSystem.h  TexturingSystem.cpp  TexturingSystem.h
src/objects/: Camera.cpp  Camera.h
src/scripting/: LuaBindings.h  LuaCollider.cpp  LuaCollider.h  LuaCollision.cpp  LuaCollision.h  LuaCollisionSystem.cpp  LuaCollisionSystem.h  LuaCoordinator.cpp  LuaCoordinator.h  LuaEngine.cpp  LuaEngine.h  LuaEntity.cpp  LuaEntity.h  LuaPosition.cpp  LuaPosition.h  LuaScript.cpp  LuaScript.h  LuaScriptSystem.cpp  LuaScriptSystem.h  LuaSystem.cpp  LuaSystem.h  LuaTextured.cpp  LuaTextured.h  LuaTexturingSystem.cpp  LuaTexturingSystem.h  ScriptManager.cpp  ScriptManager.h
src/scripting/bindings/: LuaBindings.h  LuaCollider.cpp  LuaCollision.cpp  LuaCoordinator.cpp  LuaEntity.cpp  LuaPosition.cpp  LuaTextured.cpp
src/util/: Bag.h  ExtendingBitset.cpp  ExtendingBitset.h  misc_functions.h
